Added Git to Build Tools section

--- a/index.html
+++ b/index.html
@@ -145,6 +145,12 @@
                             <progress class="nes-progress is-primary" value="50" max="100"></progress>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="col-sm-4 col-xs-12">Git</div>
+                        <div class="col-sm-8 col-xs-12">
+                            <progress class="nes-progress is-primary" value="20" max="100"></progress>
+                        </div>
+                    </div>
                     
                 </div>
             </div>
