--- a/mainwebsite_html/index.html
+++ b/mainwebsite_html/index.html
@@ -153,6 +153,22 @@
                     </div>
                     
                 </div>
+				                <div class="nes-container with-title is-dark" style='margin-top: 40px;'>
+                    <p class="title">Certifications</p>
+                    <div class="row">
+                        <div class="col-sm-4 col-xs-12">PMI CAPM</div>
+                        </div>
+                    <div class="row">
+                        <div class="col-sm-12 col-xs-12">ITIL Foundation v4</div>
+                        </div>
+									<div class="row">
+                        <div class="col-sm-12 col-xs-12">Six Sigma Yellow Belt</div>
+                        </div>
+									<div class="row">
+                        <div class="col-sm-12 col-xs-12">Eagle Scout</div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
