--- a/mainwebsite_html/index.html
+++ b/mainwebsite_html/index.html
@@ -167,6 +167,9 @@
 									<div class="row">
                         <div class="col-sm-12 col-xs-12">Eagle Scout</div>
                         </div>
+                        <div class="row">
+                            <div class="col-sm-12 col-xs-12">CompTIA Healthcare IT Technician</div>
+                            </div>
                     </div>
                 </div>
             </div>
